# docs/openapi.yml
@@ -23,10 +23,19 @@ paths:
                         id:
                           type: integer
                           example: 1
+                        darkMoveCount:
+                          type: integer
+                          example: 1 
+                        lightMoveCount:
+                          type: integer
+                          example: 1
                         winnerDisc:
                           type: integer
                           example: 1
                         startedAt:
+                          type: string
+                          example: 2017-02-21T17:32:28Z
+                        endAt:
                           type: string
                           example: 2017-02-21T17:32:28Z
     post:
